# OS

./: README.md
1st_semester/lab1/dynamic_lib/: main.c
1st_semester/lab1/static_lib/: hello-static.c  main.c
1st_semester/lab2/: hello_asm.c  main_syscall.c
1st_semester/lab2/mini-strace/: mini_strace.c
1st_semester/lab3/task1/: CMakeLists.txt  build.sh  dirs_maker.sh
1st_semester/lab3/task2/: CMakeLists.txt
1st_semester/lab3/task3/: CMakeLists.txt  build.sh
1st_semester/lab4/task2/: CMakeLists.txt  build.sh
1st_semester/lab4/task3/: CMakeLists.txt
1st_semester/lab4/task3/lib/: my_malloc.c
1st_semester/lab5/task2/: CMakeLists.txt
1st_semester/lab5/task3/: build.sh
1st_semester/lab7/task2/: build.sh
1st_semester/lab8/: file
2nd_semester/b1/task1/: build.sh  main_a.c  main_b.c
2nd_semester/b3/: Makefile  README.md  cache.c  cache.h  config.h  proxy.c  proxy.h
lab1/dynamic_lib/: hello  hello-dynamic.c  hello-dynamic.h
lab1/simple/: hello
lab1/static_lib/: hello  hello-static.h
lab2/: hello_asm.c  main_write.c
lab2/mini-strace/: mini_strace.c  mini_strace_syscalls.h
lab3/reversed_copy/: dir_utils.c  dir_utils.h  main.c
lab3/task1/: CMakeLists.txt
lab3/task2/: build.sh  create_hard_links.sh
lab3/task3/: 60s_proc.c
lab4/task1/: CMakeLists.txt  README.md  main.c
lab4/task2/: CMakeLists.txt
lab4/task3/: CMakeLists.txt
lab5/task1/: CMakeLists.txt
lab5/task2/: build.sh
lab5/task3/: CMakeLists.txt
lab7/task1/: CMakeLists.txt
lab7/task2/: CMakeLists.txt
lab7/task3/: CMakeLists.txt
lab8/: print_file.c
(+112 files in other folders)
